# pspsps

./: .gitignore  .gitmodules  Cargo.toml  README.md
psx-bench/: Cargo.toml
psx-bench/src/: main.rs
psx-cdrom-sys/: Cargo.toml  build.rs
psx-cdrom-sys/src/: lib.rs
psx-core/: Cargo.toml
psx-core/src/: cdrom.rs  cpu.rs  exe.rs  gpu.rs  irq.rs  lib.rs  mmu.rs  psx.rs  sio.rs  spu.rs  timer.rs
psx-core/src/cdrom/: irq.rs  reg.rs
psx-core/src/cpu/: cop.rs  decoder.rs  handlers.rs  hooks.rs  internal.rs  interpreter.rs  lut.rs
psx-core/src/gpu/: cmd.rs  gp.rs  gp0.rs  gp1.rs  rasterizer.rs  rgb.rs  status.rs
psx-dbg/: Cargo.toml  build.rs
psx-dbg/src/: colors.rs  debugger.rs  io.rs  main.rs  states.rs  widgets.rs
psx-dbg/src/grammar/: instruction.pest
psx-dbg/src/states/: breakpoints.rs  cdrom.rs  cpu.rs  dma.rs  gpu.rs  irq.rs  mmu.rs  timers.rs  trace.rs  tty.rs
psx-dbg/src/widgets/: breakpoints.rs  cdrom.rs  cop.rs  cpu.rs  display.rs  dma.rs  gpu.rs  instruction_renderer.rs  irq.rs  mmu.rs  timers.rs  trace.rs  tty.rs
psx-emu/: Cargo.toml
psx-emu/shaders/: crt.wgsl
psx-emu/src/: input.rs  main.rs  renderer.rs
psx-trace-ingestor/: Cargo.toml
psx-trace-ingestor/src/: main.rs
psx-trace-viewer/: .env.local  README.md  index.html  package-lock.json  package.json  tailwind.config.js
psx-trace-viewer/src/: App.jsx
rom-db/: Cargo.toml
rom-db-ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
rom-db-ui/src/: App.jsx  main.jsx  theme.js
rom-db/scripts/: process-roms.ps1
rom-db/src/: main.rs
(+33 files in other folders)
