[package]
name = "psx-dbg"
version = "0.1.0"
edition = "2024"

[dependencies]
psx-core = { path = "../psx-core" }
eframe = "0.32.1"
egui = "0.32.1"
egui_dock = "0.17"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
lazy_static = "1.5.0"
egui-toast = { git = "https://github.com/ioncodes/egui-toast" }
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
